--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
     "@types/jest": "^26.0.16",
+    "@types/loadjs": "^4.0.0",
     "@types/node": "^14.14.10",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.0",
     "bootstrap": "^4.5.3",
     "jsnes": "^1.1.0",
+    "loadjs": "^4.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
